[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/GGS/src/components/option_list/ggsOptionList.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Helpers/GUI/Settings/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://addons/GGS/src/components/boolean/ggsBool.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/GUI/Theme/Themes/MenuTheme.tres" type="Theme" id=5]
[ext_resource path="res://assets/GUI/Theme/Themes/CustomToggleButtonLabel.tres" type="Theme" id=6]
[ext_resource path="res://src/Helpers/GUI/Theme/CustomSlider.tscn" type="PackedScene" id=7]

[node name="SettingsMenu" type="CenterContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
theme = ExtResource( 5 )
use_top_left = true
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = -257.0
margin_top = -150.0
margin_right = 257.0
margin_bottom = 150.0
rect_min_size = Vector2( 500, 300 )

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 509.0
margin_bottom = 295.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/GridContainer"]
margin_right = 504.0
margin_bottom = 250.0
size_flags_vertical = 3

[node name="NavigationContainer" type="HBoxContainer" parent="PanelContainer/GridContainer/VBoxContainer"]
margin_right = 504.0
margin_bottom = 17.0
alignment = 1

[node name="QLabel" type="Label" parent="PanelContainer/GridContainer/VBoxContainer/NavigationContainer"]
margin_right = 16.0
margin_bottom = 17.0
text = "Q"
valign = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/GridContainer/VBoxContainer/NavigationContainer"]
margin_left = 20.0
margin_right = 24.0
margin_bottom = 17.0

[node name="MenuNavigationList" type="HBoxContainer" parent="PanelContainer/GridContainer/VBoxContainer/NavigationContainer"]
margin_left = 28.0
margin_right = 478.0
margin_bottom = 17.0
alignment = 1

[node name="GraphicsLabel" type="Button" parent="PanelContainer/GridContainer/VBoxContainer/NavigationContainer/MenuNavigationList"]
margin_right = 100.0
margin_bottom = 17.0
theme = ExtResource( 6 )
toggle_mode = true
text = "DISPLAY"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/GridContainer/VBoxContainer/NavigationContainer/MenuNavigationList"]
margin_left = 104.0
margin_right = 108.0
margin_bottom = 17.0

[node name="AudioLabel" type="Button" parent="PanelContainer/GridContainer/VBoxContainer/NavigationContainer/MenuNavigationList"]
margin_left = 112.0
margin_right = 186.0
margin_bottom = 17.0
theme = ExtResource( 6 )
toggle_mode = true
text = "AUDIO"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/GridContainer/VBoxContainer/NavigationContainer/MenuNavigationList"]
margin_left = 190.0
margin_right = 194.0
margin_bottom = 17.0

[node name="ControlLabel" type="Button" parent="PanelContainer/GridContainer/VBoxContainer/NavigationContainer/MenuNavigationList"]
margin_left = 198.0
margin_right = 312.0
margin_bottom = 17.0
theme = ExtResource( 6 )
toggle_mode = true
text = "CONTROLS"

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/GridContainer/VBoxContainer/NavigationContainer/MenuNavigationList"]
margin_left = 316.0
margin_right = 320.0
margin_bottom = 17.0

[node name="AdvancedLabel" type="Button" parent="PanelContainer/GridContainer/VBoxContainer/NavigationContainer/MenuNavigationList"]
margin_left = 324.0
margin_right = 450.0
margin_bottom = 17.0
theme = ExtResource( 6 )
toggle_mode = true
text = "ADVANCED"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/GridContainer/VBoxContainer/NavigationContainer"]
margin_left = 482.0
margin_right = 486.0
margin_bottom = 17.0

[node name="ELabel" type="Label" parent="PanelContainer/GridContainer/VBoxContainer/NavigationContainer"]
margin_left = 490.0
margin_right = 504.0
margin_bottom = 17.0
text = "E"
align = 2
valign = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/GridContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 504.0
margin_bottom = 25.0

[node name="GraphicsGrid" type="GridContainer" parent="PanelContainer/GridContainer/VBoxContainer"]
visible = false
margin_top = 29.0
margin_right = 504.0
margin_bottom = 205.0
columns = 2

[node name="GraphicsLabel" type="Label" parent="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid"]
margin_right = 250.0
margin_bottom = 17.0
rect_min_size = Vector2( 250, 0 )
text = "GRAPHICS"

[node name="EmptyLabel" type="Label" parent="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 17.0

[node name="ResolutionLabel" type="Label" parent="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid"]
margin_top = 28.0
margin_right = 250.0
margin_bottom = 45.0
text = "Resolution"
align = 1

[node name="ResolutionList" parent="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid" instance=ExtResource( 1 )]
margin_left = 254.0
margin_top = 25.0
margin_right = 504.0
margin_bottom = 49.0
setting_index = 9

[node name="WindowModeLabel" type="Label" parent="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid"]
margin_top = 60.0
margin_right = 250.0
margin_bottom = 77.0
text = "Window mode"
align = 1

[node name="WindowModeList" parent="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid" instance=ExtResource( 1 )]
margin_left = 254.0
margin_top = 57.0
margin_right = 504.0
margin_bottom = 81.0
text = "FullScreen"
items = [ "FullScreen", null, false, 0, null, "Windowed", null, false, 1, null ]
selected = 0
setting_index = 8

[node name="VsyncLabel" type="Label" parent="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid"]
margin_top = 89.0
margin_right = 250.0
margin_bottom = 106.0
text = "Vsync"
align = 1

[node name="VsyncCheckbox" parent="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid" instance=ExtResource( 3 )]
margin_left = 372.0
margin_top = 89.0
margin_right = 385.0
margin_bottom = 106.0
size_flags_horizontal = 4
align = 1
setting_index = 7

[node name="CameraSectionLabel" type="Label" parent="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid"]
margin_top = 114.0
margin_right = 250.0
margin_bottom = 151.0
text = "
CAMERA"

[node name="EmptyLabel2" type="Label" parent="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid"]
margin_left = 254.0
margin_top = 124.0
margin_right = 504.0
margin_bottom = 141.0

[node name="ShakeLabel" type="Label" parent="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid"]
margin_top = 159.0
margin_right = 250.0
margin_bottom = 176.0
text = "Screen Shake"
align = 1

[node name="ShakeSlider" parent="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid" instance=ExtResource( 7 )]
margin_left = 254.0
margin_top = 159.0
margin_right = 504.0
margin_bottom = 176.0
size_flags_horizontal = 3

[node name="ggsSlider" parent="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid/ShakeSlider" index="0"]
margin_right = 190.0

[node name="Label" parent="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid/ShakeSlider" index="1"]
margin_left = 194.0
margin_top = 0.0
margin_right = 250.0
margin_bottom = 17.0

[node name="AudioGrid" type="GridContainer" parent="PanelContainer/GridContainer/VBoxContainer"]
visible = false
margin_top = 29.0
margin_right = 504.0
margin_bottom = 96.0
columns = 2

[node name="MasterVolumeLabel" type="Label" parent="PanelContainer/GridContainer/VBoxContainer/AudioGrid"]
margin_right = 250.0
margin_bottom = 17.0
text = "Master"

[node name="MasterVolumeSlider" parent="PanelContainer/GridContainer/VBoxContainer/AudioGrid" instance=ExtResource( 7 )]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 17.0

[node name="ggsSlider" parent="PanelContainer/GridContainer/VBoxContainer/AudioGrid/MasterVolumeSlider" index="0"]
margin_right = 190.0
setting_index = 10

[node name="Label" parent="PanelContainer/GridContainer/VBoxContainer/AudioGrid/MasterVolumeSlider" index="1"]
margin_left = 194.0
margin_top = 0.0
margin_right = 250.0
margin_bottom = 17.0

[node name="SfxVolumeLabel" type="Label" parent="PanelContainer/GridContainer/VBoxContainer/AudioGrid"]
margin_top = 25.0
margin_right = 250.0
margin_bottom = 42.0
rect_min_size = Vector2( 250, 0 )
text = "Sound effects"

[node name="SfxVolumeSlider" parent="PanelContainer/GridContainer/VBoxContainer/AudioGrid" instance=ExtResource( 7 )]
margin_left = 254.0
margin_top = 25.0
margin_right = 504.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="ggsSlider" parent="PanelContainer/GridContainer/VBoxContainer/AudioGrid/SfxVolumeSlider" index="0"]
margin_right = 190.0
setting_index = 6

[node name="Label" parent="PanelContainer/GridContainer/VBoxContainer/AudioGrid/SfxVolumeSlider" index="1"]
margin_left = 194.0
margin_top = 0.0
margin_right = 250.0
margin_bottom = 17.0

[node name="MusicVolumeLabel" type="Label" parent="PanelContainer/GridContainer/VBoxContainer/AudioGrid"]
margin_top = 50.0
margin_right = 250.0
margin_bottom = 67.0
rect_min_size = Vector2( 250, 0 )
text = "Music"

[node name="MusicVolumeSlider" parent="PanelContainer/GridContainer/VBoxContainer/AudioGrid" instance=ExtResource( 7 )]
margin_left = 254.0
margin_top = 50.0
margin_right = 504.0
margin_bottom = 67.0

[node name="ggsSlider" parent="PanelContainer/GridContainer/VBoxContainer/AudioGrid/MusicVolumeSlider" index="0"]
margin_right = 190.0
setting_index = 5

[node name="Label" parent="PanelContainer/GridContainer/VBoxContainer/AudioGrid/MusicVolumeSlider" index="1"]
margin_left = 194.0
margin_top = 0.0
margin_right = 250.0
margin_bottom = 17.0

[node name="ControlsGrid" type="GridContainer" parent="PanelContainer/GridContainer/VBoxContainer"]
visible = false
margin_top = 29.0
margin_right = 504.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/GridContainer/VBoxContainer/ControlsGrid"]
margin_right = 52.0
margin_bottom = 17.0
text = "Test"

[node name="AdvancedGrid" type="GridContainer" parent="PanelContainer/GridContainer/VBoxContainer"]
visible = false
margin_top = 29.0
margin_right = 504.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer/GridContainer"]
margin_top = 258.0
margin_right = 504.0
margin_bottom = 290.0
alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/GridContainer/HBoxContainer"]
margin_right = 504.0
margin_bottom = 4.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/GridContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 504.0
margin_bottom = 32.0
alignment = 1

[node name="OkButton" type="Button" parent="PanelContainer/GridContainer/HBoxContainer/VBoxContainer"]
margin_left = 203.0
margin_right = 301.0
margin_bottom = 24.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "     OK     "

[connection signal="toggled" from="PanelContainer/GridContainer/VBoxContainer/NavigationContainer/MenuNavigationList/GraphicsLabel" to="." method="_on_GraphicsLabel_toggled"]
[connection signal="toggled" from="PanelContainer/GridContainer/VBoxContainer/NavigationContainer/MenuNavigationList/AudioLabel" to="." method="_on_AudioLabel_toggled"]
[connection signal="toggled" from="PanelContainer/GridContainer/VBoxContainer/NavigationContainer/MenuNavigationList/ControlLabel" to="." method="_on_ControlLabel_toggled"]
[connection signal="toggled" from="PanelContainer/GridContainer/VBoxContainer/NavigationContainer/MenuNavigationList/AdvancedLabel" to="." method="_on_AdvancedLabel_toggled"]
[connection signal="pressed" from="PanelContainer/GridContainer/HBoxContainer/VBoxContainer/OkButton" to="." method="_on_OkButton_pressed"]

[editable path="PanelContainer/GridContainer/VBoxContainer/GraphicsGrid/ShakeSlider"]
[editable path="PanelContainer/GridContainer/VBoxContainer/AudioGrid/MasterVolumeSlider"]
[editable path="PanelContainer/GridContainer/VBoxContainer/AudioGrid/SfxVolumeSlider"]
[editable path="PanelContainer/GridContainer/VBoxContainer/AudioGrid/MusicVolumeSlider"]
